Bug 479382 - libmar doesn't build on windows ce (uses posix file io); r=benjamin